src/test/ui/rfc-2008-non-exhaustive/enum_same_crate_empty_match.stderr
error[E0004]: non-exhaustive patterns: multiple patterns of type `NonExhaustiveEnum` are not handled
  --> $DIR/enum_same_crate_empty_match.rs:33:11
   |
LL | / pub enum NonExhaustiveEnum {
LL | |     Unit,
   | |     ---- variant not covered
LL | |
LL | |     Tuple(u32),
   | |     ----- variant not covered
LL | |
LL | |     Struct { field: u32 }
   | |     ------ variant not covered
LL | |
LL | | }
   | |_- `NonExhaustiveEnum` defined here
...
LL |       match NonExhaustiveEnum::Unit {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: multiple patterns of type `NormalEnum` are not handled
  --> $DIR/enum_same_crate_empty_match.rs:35:11
   |
LL | / pub enum NormalEnum {
LL | |     Unit,
   | |     ---- variant not covered
LL | |
LL | |     Tuple(u32),
   | |     ----- variant not covered
LL | |
LL | |     Struct { field: u32 }
   | |     ------ variant not covered
LL | |
LL | | }
   | |_- `NormalEnum` defined here
...
LL |       match NormalEnum::Unit {}
   |             ^^^^^^^^^^^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
